--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "concurrently": "^7.5.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
